--- a/src/lib/styles/components.css
+++ b/src/lib/styles/components.css
@@ -1,4 +1,7 @@
 /* -- TYPOGRAPHY -- */
+.text-link {
+	@apply hover:underline;
+}
 .text-icon-link {
 	@apply flex items-center gap-2 rounded-sm px-2 hover:bg-accent;
 }
