feat: added CBL section and background pattern

--- a/src/lib/styles/components.css
+++ b/src/lib/styles/components.css
@@ -5,3 +5,6 @@
 .text-icon-link {
 	@apply flex items-center gap-2 rounded-sm px-2 hover:bg-accent;
 }
+.with-prose {
+	@apply prose prose-sm md:prose-base;
+}
