--- a/src/lib/styles/index.css
+++ b/src/lib/styles/index.css
@@ -2,6 +2,7 @@
 @import './fonts.css';
 @import './utils.css';
 @import './components.css';
+@import './patterns.css';
 @import './nprogress.css';
 @import './svelty-picker.css';
 
