--- a/src/lib/styles/utils.css
+++ b/src/lib/styles/utils.css
@@ -1,13 +1,26 @@
-/* -- FLEXBOX -- */
-.flex-center {
-	@apply flex items-center justify-center;
-}
-.flex-start-center {
-	@apply flex items-center justify-start;
-}
-.flex-start-end {
-	@apply flex items-end justify-start;
-}
-.flex-end-center {
-	@apply flex items-center justify-end;
+@layer utilities {
+	/* -- FLEXBOX -- */
+	.flex-center {
+		@apply flex items-center justify-center;
+	}
+	.flex-start-center {
+		@apply flex items-center justify-start;
+	}
+	.flex-start-end {
+		@apply flex items-end justify-start;
+	}
+	.flex-end-center {
+		@apply flex items-center justify-end;
+	}
+
+	/* -- BG COLOR -- */
+	.bg-primary-glass {
+		@apply bg-primary/20 dark:bg-primary/40;
+	}
+	.bg-secondary-glass {
+		@apply bg-yellow-400/20 dark:bg-yellow-400/40;
+	}
+	.bg-dark-glass {
+		@apply bg-zinc-800/20 dark:bg-zinc-800/40;
+	}
 }
