--- a/src/lib/styles/index.css
+++ b/src/lib/styles/index.css
@@ -15,7 +15,7 @@
 @layer base {
 	/* -- DEFAULT -- */
 	* {
-		@apply m-0 box-border p-0;
+		@apply m-0 box-border scroll-smooth p-0;
 		font-family: 'Poppins', sans-serif;
 		scrollbar-width: thin;
 		-webkit-tap-highlight-color: transparent;
