--- a/src/lib/styles/index.css
+++ b/src/lib/styles/index.css
@@ -21,7 +21,7 @@
 		-webkit-tap-highlight-color: transparent;
 	}
 	body {
-		@apply bg-surface-100 text-[16px] text-slate-900 dark:text-slate-100;
+		@apply overflow-hidden bg-surface-100 text-[16px] text-slate-900 dark:text-slate-100;
 	}
 
 	/* -- PHOSPHOR ICONS -- */
